Updated HTML forms and added Archivos necesarios folder

--- a/web.html
+++ b/web.html
@@ -130,7 +130,7 @@
             <span class="close-button">&times;</span>
             <h2 id="modal-product-title"></h2>
             <p>Por favor, introduce tu correo electrónico y tu usuario de Discord para que podamos enviarte los detalles de tu compra una vez completado el pago en PayPal.</p>
-            <form id="purchaseForm" action="https://formspree.io/f/xpwrallz" method="POST">
+            <form id="purchaseForm" action="https://cast-sneakers-backend1.onrender.com/webhook/purchase" method="POST">
                 <input type="hidden" name="product_name" id="form-product-name">
                 <input type="hidden" name="product_price" id="form-product-price">
                 <input type="hidden" name="paypal_url" id="form-paypal-url">
